Update Science data

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,10 @@ packages = find:
 python_requires = >=3.6
 setup_requires = setuptools_scm
 ;install_requires = sunpy[net]
-install_requires = sunpy[net,timeseries]==2.1.0rc3
+install_requires =
+    sunpy[net,timeseries]==2.1.0rc3
+    stixcore@git+https://github.com/i4ds/STIXCore
+
 
 [options.entry_points]
 console_scripts =
